--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<script src="src/Game.js"></script>
+		<script src="src/Bot.js"></script>
 	</head>
 
 	<body onload="document.getElementById('output').innerHTML = game.toString();">
@@ -13,6 +14,7 @@
 		<input type="number" id="speed" value="1000">
 		<button onclick="bot.start(document.getElementById('speed').value, document.getElementById('output'), document.getElementById('diceOutput'))">start bot</button>
 		<button onclick="bot.stop()">stop bot</button>
+		<button onclick="game.resetScore(); document.getElementById('output').innerHTML = game.toString();">reset</button>
 
 		
 		<script type="text/javascript">
